# graphite-pdf

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  cliff.toml  release.toml  skills-lock.json
.githooks/: pre-push
.github/workflows/: ci.yml  docs.yml  release.yml
architecture/: README.md
brand/: README.md  colors.css  design-pallete.md  tokens.json  tokens.yaml  visual-identity.md
crates/document/: Cargo.toml  README.md
crates/document/src/: lib.rs
crates/errors/: Cargo.toml  README.md
crates/errors/src/: lib.rs
crates/font/: Cargo.toml  README.md
crates/font/src/: error.rs  lib.rs
crates/image/: Cargo.toml  README.md
crates/image/src/: error.rs  lib.rs
crates/kit/: Cargo.toml  README.md
crates/kit/benches/: benchmarks.rs
crates/kit/examples/: complex.rs  math.rs  native.rs  simple.rs  svg.rs
crates/kit/examples/support/: mod.rs
crates/kit/src/: compress.rs  document.rs  error.rs  font.rs  image_render.rs  lib.rs  metadata.rs  objects.rs  outline.rs  page.rs  pattern.rs  security.rs  svg_render.rs  table.rs  tests.rs  text.rs  vector.rs  writer.rs
crates/layout/: Cargo.toml  README.md
crates/layout/src/: error.rs  lib.rs
crates/math/: Cargo.toml  README.md
crates/math/src/: error.rs  lib.rs
crates/primitives/: Cargo.toml  README.md
crates/primitives/src/: color.rs  elements.rs  geometry.rs  lib.rs
crates/render/: Cargo.toml  README.md
crates/render/src/: error.rs  lib.rs
crates/render/tests/: kit_backend_pipeline.rs
crates/renderer/: Cargo.toml  README.md
crates/renderer/examples/: pipeline.rs
crates/renderer/examples/support/: mod.rs
crates/renderer/src/: error.rs  lib.rs
crates/renderer/tests/: example_output_paths.rs
crates/style/: Cargo.toml  README.md
crates/style/src/: lib.rs
crates/stylesheet/: Cargo.toml  README.md
crates/stylesheet/src/: error.rs  lib.rs
crates/svg/: Cargo.toml  README.md
crates/svg/src/: error.rs  lib.rs
crates/template/: Cargo.toml
crates/template-macros/: Cargo.toml
crates/template-macros/src/: lib.rs
crates/template/src/: lib.rs
crates/textkit/: Cargo.toml  README.md
crates/textkit/src/: error.rs  lib.rs
crates/utils/: Cargo.toml  README.md
crates/utils/src/: array.rs  compose.rs  lib.rs  object.rs  optional.rs  string.rs  value.rs
docs/: Cargo.toml  LICENSE-MIT  README.md  index.html  index.scss  tailwind.config.js
docs/content/architecture/: compatibility.md  overview.md  rendering-process.md
docs/content/crates/: document.md  errors.md  font.md  image.md  kit.md  layout.md  math.md  primitives.md  render.md  renderer.md  style.md  stylesheet.md  svg.md  template-macros.md  template.md  textkit.md  utils.md
docs/content/getting-started/: installation.md  introduction.md  quickstart.md
docs/content/templating/: macros.md  overview.md
docs/src/: app.rs  main.rs  router.rs
docs/src/components/: doc_layout.rs  example_component.rs  markdown.rs  mod.rs  navbar.rs  sidebar.rs  toc.rs
docs/src/content/: mod.rs
docs/src/pages/: doc_page.rs  example_page.rs  home.rs  mod.rs
example/: Cargo.toml  README.md
example/src/: main.rs
scripts/: publish-initial.sh
src/: error.rs  lib.rs
src/document/: mod.rs
src/layout/: mod.rs
src/primitives/: geometry.rs  mod.rs  units.rs
src/render/: mod.rs
src/renderer/: mod.rs
src/style/: mod.rs
src/textkit/: mod.rs
tests/: root_compat_facade.rs  template_macro_smoke.rs
