[package]
name = "docs"
version = "0.1.0"
edition = "2024"
description = "GraphitePDF documentation site"
readme = "README.md"
repository = "https://github.com/admirsaheta/graphitepdf"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk", "docs", "graphitepdf"]
categories = ["gui", "wasm", "web-programming"]

[package.metadata.release]
publish = false
tag     = false

[dependencies]
yew = { version = "0.23", features = ["csr"] }
yew-router = "0.20"
gloo-net = "0.7"
pulldown-cmark = { version = "0.13.4", default-features = false, features = ["html"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.72"
js-sys = "0.3.99"
web-sys = { version = "0.3.99", features = [
    "DomRect",
    "HtmlElement",
    "Element",
    "Window",
    "Document",
    "CssStyleDeclaration",
    "IntersectionObserver",
    "IntersectionObserverEntry",
    "IntersectionObserverInit",
    "DomTokenList",
] }
