[package]
name = "graphitepdf-document"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
categories.workspace = true
description = "Compatibility document facade types for GraphitePDF."
documentation = "https://docs.rs/graphitepdf-document"
keywords = ["pdf", "document", "compat", "graphitepdf"]

[lib]
path = "src/lib.rs"

[dependencies]
graphitepdf_style = { package = "graphitepdf-style", path = "../style", version = "0.1.0" }
graphitepdf-image.workspace = true
graphitepdf-layout.workspace = true
graphitepdf-primitives.workspace = true
graphitepdf-render.workspace = true
graphitepdf-renderer.workspace = true
graphitepdf-textkit.workspace = true
