[package]
name = "graphitepdf-errors"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
categories.workspace = true
description = "Shared error types for the GraphitePDF workspace."
documentation = "https://docs.rs/graphitepdf-errors"
keywords = ["pdf", "errors", "graphitepdf", "library"]

[lib]
path = "src/lib.rs"

[dependencies]
thiserror = "2.0"
