[package]
name = "graphitepdf-image"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
categories.workspace = true
description = "Image primitives for GraphitePDF."
documentation = "https://docs.rs/graphitepdf-image"
keywords = ["pdf", "image", "graphics", "graphitepdf"]

[lib]
path = "src/lib.rs"

[dependencies]
base64 = "0.22"
graphitepdf-errors.workspace = true
graphitepdf-svg.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
thiserror = "1.0"
tokio = { version = "1.47", features = ["fs"] }

[dev-dependencies]
tokio = { version = "1.47", features = ["io-util", "macros", "net", "rt-multi-thread", "sync"] }
