[package]
name = "graphitepdf-layout"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
categories.workspace = true
description = "Minimal layout planning primitives for GraphitePDF."
documentation = "https://docs.rs/graphitepdf-layout"
keywords = ["pdf", "layout", "typesetting", "graphitepdf"]

[lib]
path = "src/lib.rs"

[dependencies]
graphitepdf-errors.workspace = true
graphitepdf-font.workspace = true
graphitepdf-primitives.workspace = true
graphitepdf-textkit.workspace = true
thiserror = "1.0"
