[package]
name = "graphitepdf-primitives"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
authors = ["admirsaheta <admir@flyrank.com>"]
description = "Primitive element type constants and shared foundational types for graphitepdf."
documentation = "https://docs.rs/graphitepdf-primitives"
keywords = ["pdf", "primitives", "layout", "graphics", "renderer"]
readme = "README.md"

[lib]
path = "src/lib.rs"
