[package]
name = "graphitepdf-render"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
categories.workspace = true
description = "Minimal render command generation for GraphitePDF."
documentation = "https://docs.rs/graphitepdf-render"
keywords = ["pdf", "render", "graphics", "graphitepdf"]

[lib]
path = "src/lib.rs"

[dependencies]
graphitepdf-errors.workspace = true
graphitepdf-font.workspace = true
graphitepdf-image.workspace = true
graphitepdf-kit.workspace = true
graphitepdf-layout.workspace = true
graphitepdf-primitives.workspace = true
graphitepdf-svg.workspace = true
graphitepdf-textkit.workspace = true
graphitepdf-utils.workspace = true
thiserror = "1.0"
tokio = { version = "1.47", features = ["full"] }

[dev-dependencies]
flate2 = { version = "1.0", features = ["zlib"] }
png = "0.18"
