[package]
name = "graphitepdf-renderer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
categories.workspace = true
description = "Minimal renderer backend abstraction for GraphitePDF."
documentation = "https://docs.rs/graphitepdf-renderer"
keywords = ["pdf", "renderer", "backend", "graphitepdf"]

[lib]
path = "src/lib.rs"

[dependencies]
graphitepdf-errors.workspace = true
graphitepdf-render.workspace = true
thiserror = "1.0"
