[package]
name = "graphitepdf-template-macros"
description = "Proc-macro support for GraphitePDF template authoring."

[package.edition]
workspace = true

[package.rust-version]
workspace = true

[package.version]
workspace = true

[package.homepage]
workspace = true

[package.categories]
workspace = true

[package.license-file]
workspace = true

[package.repository]
workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
