[package]
name = "graphitepdf-textkit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
categories.workspace = true
description = "Minimal text shaping and text block primitives for GraphitePDF."
documentation = "https://docs.rs/graphitepdf-textkit"
keywords = ["pdf", "text", "typography", "graphitepdf"]

[lib]
path = "src/lib.rs"

[dependencies]
graphitepdf-errors.workspace = true
graphitepdf-font.workspace = true
graphitepdf-primitives.workspace = true
thiserror = "1.0"
