[package]
name = "graphitepdf-utils"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
authors = ["admirsaheta <admir@flyrank.com>"]
description = "Lightweight utility functions for GraphitePDF and related Rust workflows."
documentation = "https://docs.rs/graphitepdf-utils"
keywords = ["pdf", "utilities", "functional", "layout", "graphics"]
readme = "README.md"

[lib]
path = "src/lib.rs"

[dependencies]
